--- a/src/ps/herald/templates/angular_api/index.html
+++ b/src/ps/herald/templates/angular_api/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyToDo</title>
+  <title>PsHeraldAngular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="/static/angular_api/styles.css"></head>
+<link rel="stylesheet" href="styles.css"></head>
 <body>
   <app-root></app-root>
 <script src="/static/angular_api/runtime.js" defer></script><script src="/static/angular_api/polyfills.js" defer></script><script src="/static/angular_api/vendor.js" defer></script><script src="/static/angular_api/main.js" defer></script></body>
