angular api takes the DEV_STAGE specific port;ps_bridge indicates new connections

--- a/src/ps/herald/templates/bare_html_api/base.html
+++ b/src/ps/herald/templates/bare_html_api/base.html
@@ -3,7 +3,7 @@
 
 {% block head %}
 <link rel="icon"      type="image/x-icon"    href="/static/favicon.ico" >
-<link rel="stylesheet" type="text/css" href="/static/logging_server.css">
+<link rel="stylesheet" type="text/css" href="/static/bare_html/logging_server.css">
 {% endblock %}
 
 {% block navbar %}
